--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html>  
+<head> Tulisan Pertama </head>  
+<body>
 Bismillaahirrochmaanirrochiim
-Kelawan nyebut Asmane Gusti Alloh
-Dzat Ingkang Moho Welas Asih.
+"Kelawan nyebut Asmane Gusti Alloh
+Dzat Ingkang Moho Welas Asih"
+</body>
+</html>
