--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>  
 <head> Tulisan Pertama </head>  
 <body>
-Bismillaahirrochmaanirrochiim
-"Kelawan nyebut Asmane Gusti Alloh
-Dzat Ingkang Moho Welas Asih"
+Alchamdulillahirobbil eaalamiin
 </body>
 </html>
