--- a/index.html
+++ b/index.html
@@ -5,3 +5,10 @@ Alchamdulillahirobbil eaalamiin
 Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam
 </body>
 </html>
+
+<html>  
+<head> Tulisan Kedua </head>  
+<body>
+Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam
+</body>
+</html>
