--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>  
 <head> Tulisan Pertama </head>  
 <body>
-Alchamdulillahirobbil eaalamiin 
+Alchamdulillaahirobbil eaalamiin 
 Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam
 </body>
 </html>
