--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <html>  
-<head> Tulisan Pertama </head>  
+<head> </head>  
 <body>
+    Bismillahirrochmaanirrochiim
 Alchamdulillaahi robbil eaalamiin 
-Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam
-</body>
-</html>
-
-<html>  
-<head> Tulisan Kedua </head>  
-<body>
 Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam
 </body>
 </html>
