--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>  
 <head> </head>  
 <body>
-    Bismillahirrochmaanirrochiim
-Alchamdulillaahi robbil eaalamiin 
+    Bismillahirrochmaanirrochiim </body>
+<body> Alchamdulillaahi robbil eaalamiin 
 Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam
 </body>
 </html>
