--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>  
 <head> </head>  
 <body>
-    Bismillahirrochmaanirrochiim </body>
-<body> Alchamdulillaahi robbil eaalamiin 
-Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam
+    <p> Bismillahirrochmaanirrochiim </p>
+    <p> Alchamdulillaahi robbil eaalamiin </p> 
+    <p> Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam </p>
 </body>
 </html>
