--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>  
 <head> </head>  
 <body>
-    <p> Bismillahirrochmaanirrochiim </p>
+    <p> بسم الله الر حمن الرحيم </p>
+    <p> <b> Bismillahirrochmaanirrochiim </b> </p>
     <p> Alchamdulillaahi robbil eaalamiin </p> 
     <p> Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam </p>
 </body>
