--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <p> بسم الله الر حمن الرحيم </p>
     <p> <b> Bismillahirrochmaanirrochiim </b> </p>
-    <p> Alchamdulillaahi robbil eaalamiin </p> 
+    <p> <u> Alchamdulillaahi robbil eaalamiin </u> </p> 
     <p> Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam </p>
 </body>
 </html>
