--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <p> بسم الله الر حمن الرحيم </p>
     <p> <b> Bismillahirrochmaanirrochiim </b> </p>
     <p> <u> Alchamdulillaahi robbil eaalamiin </u> </p> 
-    <p> Segala Puji Bagi Alloh Tuhan Seru Sekalian Alam </p>
+    <p> Arrochmaanirrochiim </p>
 </body>
 </html>
