--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <p> بسم الله الر حمن الرحيم </p>
     <p> <b> Bismillahirrochmaanirrochiim </b> </p>
-    <p> <u> Alchamdulillaahi robbil eaalamiin </u> </p> 
-    <p> Arrochmaanirrochiim </p>
+    <p> <i> Alchamdulillaahi robbil eaalamiin </i> </p> 
+    <p> <u> Arrochmaanirrochiim </u> </p>
 </body>
 </html>
