--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>  
-<head> </head>  
-<body>
-    <p> بسم الله الر حمن الرحيم </p>
-    <p> <b> Bismillahirrochmaanirrochiim </b> </p>
-    <p> <i> Alchamdulillaahi robbil eaalamiin </i> </p> 
-    <p> <u> Arrochmaanirrochiim </u> </p>
+     <head> 
+     </head>  
+     <body>
+       <p> بسم الله الر حمن الرحيم </p>
+       <p> 
+       <b> Bismillahirrochmaanirrochiim </b> </p>
+       <p> 
+       <i> Alchamdulillaahi robbil eaalamiin </i> </p> 
+       <p> 
+       <u> Arrochmaanirrochiim </u> </p>
 </body>
 </html>
