--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
      <head> 
      </head>  
      <body>
-       <p> بسم الله الر حمن الرحيم </p>
        <p> 
-       <b> Bismillahirrochmaanirrochiim </b> </p>
+        بسم الله الر حمن الرحيم 
+           </p>
        <p> 
-       <i> Alchamdulillaahi robbil eaalamiin </i> </p> 
+       <b> <i> <u>
+          Bismillahirrochmaanirrochiim 
+       </b> <i/> </u>
+       </p>
        <p> 
-       <u> Arrochmaanirrochiim </u> </p>
+       <i> 
+          Alchamdulillaahi robbil eaalamiin 
+       </i> </p> 
+       <p> 
+       <u> 
+       Arrochmaanirrochiim 
+       </u> </p>
 </body>
 </html>
