--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
        Arrochmaanirrochiim 
        </u> 
        </p>
-       <h2> Maaliki yaumiddiin </h2>
+       <h1> Maaliki yaumiddiin </h1>
+ <h2> Iyya kana'budu wa iyyaa kanasta'iin </h2>
+ <h2> Ihdinash shiroothil mustaqiem </h2>
+ <h3> Shiroothol ladzhiina an eamta alayhim </h3>
+ <h4> Ghoiril maghdzhubi ealaihim </h4>
+ <h5> Waladzhoolliin </h5>
+ <h6> Aaaaaamiin</h6>
 </body>
 </html>
