--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <h2> Ihdinash shiroothil mustaqiem </h2>
  <h3> Shiroothol ladzhiina an eamta alayhim </h3>
  <h4> Ghoiril maghdzhubi ealaihim </h4>
- <h5> Waladzhoolliin </h5>
+ <h5> Waladzhool~liin </h5>
  <h6> Aaaaaamiin</h6>
 </body>
 </html>
