--- a/contoh.html
+++ b/contoh.html
@@ -6,7 +6,11 @@
                  </h1>
            </head>
     <body>
-              Malam ini kami belajar mengenai html. 
-              Ada beberapa hal yang harus dihafalkan dan dipahami terlebih dahulu.
-          
+            <p>  
+               Malam ini kami belajar mengenai html. 
+               Ada beberapa hal yang harus dihafalkan dan dipahami terlebih dahulu.
+            </p>
+                 <h2>
+                    Kami antusias untuk mengikuti pelajaran ini.
+                 </h2>
 </body>
