--- a/contoh.html
+++ b/contoh.html
@@ -8,9 +8,8 @@
     <body>
             <p>  
                Malam ini kami belajar mengenai html. 
-               Ada beberapa hal yang harus dihafalkan dan dipahami terlebih dahulu.
+               Ada beberapa hal yang harus dihafalkan dan dipahami terlebih dahulu
+               Kami antusias untuk mengikuti pelajaran ini.
             </p>
-                 <h2>
-                    Kami antusias untuk mengikuti pelajaran ini.
-                 </h2>
+                
 </body>
