--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
-<html>  
-     <head> 
-     </head>  
+<html>
+     </html>
+          <head> 
+               </head>  
      <body>
-       <p> 
-        بسم الله الر حمن الرحيم 
-           </p>
-       <p> 
-       <b> <i> <u>
-          Bismillahirrochmaanirrochiim 
-       </b> <i/> </u>
-       </p>
-       <p> 
-       <i> 
-          Alchamdulillaahi robbil eaalamiin 
-       </i> </p> 
-       <p> 
-       <u> 
-       Arrochmaanirrochiim 
-       </u> 
-       </p>
-       <h1> Maaliki yaumiddiin </h1>
- <h2> Iyya kana'budu wa iyyaa kanasta'iin </h2>
- <h2> Ihdinash shiroothil mustaqiem </h2>
- <h3> Shiroothol ladzhiina an eamta alayhim </h3>
- <h4> Ghoiril maghdzhubi ealaihim </h4>
- <h5> Waladzhool~liin </h5>
- <h6> Aaaaaamiin</h6>
+          <p> 
+        بسم الله الر حمن الرحيم
+          </p>
+          <p>
+               <b>
+                    <i>
+                         <u>
+                              Bismillahirrochmaanirrochiim
+                              </b>
+                         <i/>
+                         </u>
+                    </p>
+          <p>
+               <i>
+                    Alchamdulillaahi robbil eaalamiin 
+               </i>
+          </p>
+          <p>
+               <u>
+                    Arrochmaanirrochiim
+               </u>
+          </p>
+               <h1> Maaliki yaumiddiin 
+          </h1>
+               <h2> Iyya kana'budu wa iyyaa kanasta'iin 
+          </h2>
+               <h3> Ihdinash shiroothil mustaqiem 
+          </h3>
+               <h4> Shiroothol ladzhiina an eamta alayhim 
+          </h4>
+               <h5> Ghoiril maghdzhubi ealaihim 
+          </h5>
+               <h6> Waladzhool~liin </h6>
+               <h7> Aaaaaamiin 
+          </h7>
 </body>
 </html>
