--- a/contoh.html
+++ b/contoh.html
@@ -1,19 +1,19 @@
 <html>
     </html>
-           <head> 
-                 <h1>
-                      Belajar html
-                 </h1>
-           </head>
-    <body>
-            <p>  
-               Malam ini kami belajar mengenai html. 
-            </p>
-                 <p> 
-                   Ada beberapa hal yang harus dihafalkan dan dipahami terlebih dahulu
-                 </p>
-             <p> 
-                   Kami antusias untuk mengikuti pelajaran ini.
-             </p>
+        <head>
+            <h1> 
+                Belajar html di Pondok Daarul Muchibbiin 
+            </h1>
+        </head>
+    <body> 
+        <p> 
+            Malam ini kami belajar mengenai html. Dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan cara yang baik dan benar. 
+        </p>
+        <p> 
+            Ada beberapa code html yang harus dihafalkan dan dipahami terlebih dahulu sebelum menginput perintah di dalamnya. 
+        </p> 
+        <p> 
+            Kami sangat antusias untuk mengikuti pelajaran ini. 
+        </p>
                 
     </body>
