--- a/contoh.html
+++ b/contoh.html
@@ -7,10 +7,10 @@
         </head>
     <body> 
         <p> 
-            Malam ini kami belajar mengenai html. Dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan cara yang baik dan benar. 
+            Malam ini kami belajar mengenai html. Kami dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan cara yang baik dan benar. 
         </p>
         <p> 
-            Ada beberapa code html yang harus dihafalkan dan dipahami terlebih dahulu sebelum menginput perintah di dalamnya. 
+            Ada beberapa hal yang harus diperhatikan sebelum memasukkan perintah di dalam code html. Agar sesuai dengan cara dan penulisan di html secara benar. 
         </p> 
         <p> 
             Kami sangat antusias untuk mengikuti pelajaran ini. 
