--- a/contoh.html
+++ b/contoh.html
@@ -7,7 +7,7 @@
         </head>
     <body> 
         <p> 
-            Malam ini kami belajar mengenai html. Kami dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan cara yang baik dan benar. 
+            Malam ini kami belajar mengenai html. Kami dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan yang baik dan benar. 
         </p>
         <p> 
             Ada beberapa hal yang harus diperhatikan sebelum memasukkan perintah di dalam code html. Agar sesuai dengan cara dan penulisan di html secara benar. 
