--- a/contoh.html
+++ b/contoh.html
@@ -7,10 +7,12 @@
         </head>
     <body> 
         <p> 
-            Malam ini kami belajar mengenai html. Kami dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan yang baik dan benar. 
+            Malam ini kami belajar mengenai html. 
+            Kami dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan yang baik dan benar. 
         </p>
         <p> 
-            Ada beberapa hal yang harus diperhatikan sebelum memasukkan perintah di dalam code html. Agar sesuai dengan aturan penulisan di html secara benar. 
+            Ada beberapa hal yang harus diperhatikan sebelum memasukkan perintah di dalam code html. 
+            Agar sesuai dengan aturan penulisan di html secara benar. 
         </p> 
         <p> 
             Kami sangat antusias untuk mengikuti pelajaran ini. 
