--- a/contoh.html
+++ b/contoh.html
@@ -1,21 +1,63 @@
 <html>
     </html>
         <head>
-            <h1> 
-                Belajar html di Pondok Daarul Muchibbiin 
-            </h1>
-        </head>
-    <body> 
-        <p> 
-            Malam ini kami belajar mengenai html. 
-            Kami dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan yang baik dan benar. 
-        </p>
-        <p> 
-            Ada beberapa hal yang harus diperhatikan sebelum memasukkan perintah di dalam code html. 
-            Agar sesuai dengan aturan penulisan di html secara benar. 
-        </p> 
-        <p> 
-            Kami sangat antusias untuk mengikuti pelajaran ini. 
-        </p>
-                
-    </body>
+            </head>
+            <body>
+                    <h1> 
+                        Belajar html di Pondok Daarul Muchibbiin 
+                    </h1>
+                <p> 
+                    Malam ini kami belajar mengenai pengkodean html. 
+                    Dibimbing oleh Sang Guru dan diajari cara menggunakan html dengan baik dan benar.
+                    Pengenalan html ini memang membutuhkan pemikiran untuk memahami fungsi dari masing-masing kode html tersebut.
+                </p> 
+                    <h2> 
+                        Belajar menghafal letak pengkodean html di Pondok Daarul Muchibbiin 
+                    </h2>
+                <p> 
+                    Kami bertiga diajari untuk teliti dalam melihat rumus pengkodean yang diajarkan.
+                    Sebelum mempraktekkan pengkodean. 
+                    Kami diajari untuk peka pada penempatan masing-masing perintah pengkodean yang ditulis.
+                    Karena melihat dan menghafal saja ternyata belum sempurna. 
+                    Ketika kami disuruh mempraktekkan langsung ke dalam aplikasi. 
+                    Ternyata, ada beberapa hal yang harus diperhatikan sebelum memasukkan perintah di dalam code html.
+                    Misalnya hitungan jarak/tab yang digunakan.
+                    Agar sesuai dengan aturan penulisan di html secara benar.
+                    Sehingga ketika di commit bisa selaras antara rumus pengkodean dengan tampilan pada browsernya.
+                </p>
+                    <h3>
+                        Mengenal fungsi pengkodean huruf B, U dan I 
+                    </h3>
+                <p> 
+                    Kami diajari pengkodengan dengan menyisipkan perintah dengan huruf (b). 
+                    Ketika disisipkan huruf (b) tersebut pada teks yang dipilih. 
+                    Maka teks tersebut menjadi 
+                    <b>
+                        tebal.
+                    </b>
+                    Setelah itu menyisipkan huruf (u).
+                    Ketika disisipkan huruf (u) tersebut pada teks yang dipilih.
+                    Maka teks akan berubah menjadi 
+                    <u>
+                        bergaris bawah. 
+                    </u>
+                    Menggunakan fungsi huruf (i).
+                    Yang artinya, ketika disisipkan huruf (i) pada teks.
+                    Maka, teks akan berubah 
+                    <i>
+                        menjadi miring. 
+                    </i>
+                </p>
+                    <h4>
+                    Belajar menggunakan fungsi pengkodean huruf h
+                    </h4> 
+                <p> 
+                    Fungsi dari huruf (h) adalah untuk memperbesar tampilan pada teks judul.
+                    Misalnya, pada teks judul pertama disisipkan huruf h1. 
+                    Maka, tampilan teks judul tersebut menjadi besar.
+                    Contohnya, pada teks judul kedua disisipkan huruf h6. 
+                    Maka, tampilan teks judul tersebut menjadi kecil.
+                    Kesimpulannya, semakin besar angka di belakang huruf h tersebut. 
+                    Maka, semakin kecil tampilan teksnya.
+                </p>   
+            </body>
